--- a/templates/destination.html
+++ b/templates/destination.html
@@ -151,21 +151,21 @@
                 <p>Please, choose a package that is provided above 
                 <a><span class="ion-arrow-up-c" id="to-top"></span></a>
                 and submit your Rooming Form with your Passenger Info.</p>
-                <a href="http://travelzap.com/rooming/?r={booking_number}"><button>Rooming Form</button></a>
+                <a href="http://travelzap.com/rooming/?r={booking_number}" target="_blank"><button>Rooming Form</button></a>
             </div>
             
             <div class="col-sm-4 booking-well col-centered">
                 <span class="booking-number">2. Deposit</span>
                 </br></br>
                 <p class="para-bottom">Submit your ${deposits_person} deposit Per Person.</p>
-                <a href="https://travelzap.com/payments/?r={booking_number}"><button>Deposit</button></a>
+                <a href="https://travelzap.com/payments/?r={booking_number}" target="_blank"><button>Deposit</button></a>
             </div>
             
             <div class="col-sm-4 booking-well col-centered" style="display:{insurancecss}">
                 <span class="booking-number">3. Travel Insurance</span>
                 </br></br>
                 <p class="para-bottom2">This step is optional. Cancel for any reason travel insurance.</p>
-                <a href="href="{insurance}"><button>insurance</button></a>
+                <a href="{insurance}" target="_blank"><button>insurance</button></a>
             </div>
         </div><!-- .row -->
     </div><!-- .container-->
@@ -195,3 +195,4 @@
         </div><!-- .row -->
     </div><!-- .container -->
 </section><!-- #additional-info-->
+</div>
