--- a/templates/landing.html
+++ b/templates/landing.html
@@ -8,7 +8,7 @@
     	    <div class="clearfix"></div>
 	    </div><!-- end row -->
 	    
-	    <div class="wedding-subtitle text-center">Wedding</br> {wedding_date}</div>
+	    <div class="wedding-subtitle text-center">{wedding_title}</br> {wedding_date}</div>
     </div><!-- end container -->
 </section><!-- end hero -->
 
@@ -47,13 +47,12 @@
                 <p>We're getting married on {wedding_date} at {hotel_c} in {destination_c}! 
                 We truly hope you can join our family in this special celebration.</p>
                 <button data-toggle="modal" data-target="#rsvpModal">rsvp</button>
-                <button data-toggle="modal" data-target="#guestList" style="display:{guestlistCSS};">Guest List</button>
-              
+                <a href="#/wedding"><button>Wedding Page</button></a>
                 </br></br>
                 <p>We have hired a booking agent to make your travel
                 planning easy. Please checkout the Resort Page for more information about pricing and booking.</p>
                 
-                <a href="#/destination"><button>Resort</button></a>
+                <a href="#/destination"><button>Resort Page</button></a>
             </div><!-- end sample-info-text-->
         </div><!-- end row -->
     </div><!-- end container -->
