--- a/templates/wedding.html
+++ b/templates/wedding.html
@@ -6,7 +6,7 @@
     </div>
 </div><!-- .container -->
 
-<section id="gallery" class="container-space text-center">
+<section id="gallery" class="container-space text-center" style="display: {couple_gallery}">
     <div class="container">
         <div class="row row-centered">
             <div class="col-md-3 col-centered" style="display:{coupleimage1Css}">
@@ -54,11 +54,11 @@
 </section><!-- #couple-story-->
 
 <!-- REGISTERY ====================================== -->
-<section id="registery" class="container-space text-center">
+<section id="registery" class="container-space text-center" style="display:{reg1css};">
     <h1>Registry</h1>
     <div class="container">
         <div class="row">
-            <div class="col-sm-6 col-sm-offset-3" style="display:{reg1css};">
+            <div class="col-sm-6 col-sm-offset-3">
                 <p>{reg_decription}</p>
                     
                     <a href="{reg1link}" target="_blank" style="display:{reg1css};"><button>{reg1name}</button></a>
@@ -71,7 +71,7 @@
 </section><!-- #registery-->
 
 <!-- BRIDESMAIDS AND GROOMSMEN ====================================== -->
-<section id="maids-grooms" class="container-space">
+<section id="maids-grooms" class="container-space" style="display: {bridesmaid1}">
     <h1 class="text-center"> Bridesmaids & Groomsmen</h1>
     <div class="container">
         <div class="row bride-groom-sm-view">
