--- a/style/main.scss
+++ b/style/main.scss
@@ -354,7 +354,7 @@ footer a {
     -webkit-border-radius: 6px;
     -moz-border-radius: 6px;
     border-radius: 6px;
-    padding: 20px 0 1px 0;
+    padding: 20px 5px 1px 5px;
     color: white;
     font-size: 13px;
 }
@@ -665,12 +665,6 @@ iframe {
 
 // ************************************* //
 // 9.0 DESTINATION PAGE ======= //
-#destination-page {
-    section:nth-child(even) {
-    background: #f6f6f6;
-}
-}
-
 #destination {
     h1 {
         margin-bottom: 0;
@@ -711,6 +705,9 @@ iframe {
     h1 {
         margin-bottom: 10px;
     }
+    .white {
+        border: solid 10px #f6f6f6;
+    }
 }
 
 .ion-arrow-up-c {
@@ -728,6 +725,18 @@ iframe {
     }
 }
 
+.jrow-centered {
+  text-align: center;
+  display: table-row;
+}
+
+.jcol-centered {
+  display: table-cell;
+  float: none;
+  vertical-align: top;
+  text-align: left;
+}
+
 .package-well-img {
     background-color: white;
     padding-top: 15px;
@@ -739,6 +748,7 @@ iframe {
     width: 100%;
     height: 200px;
     overflow: hidden;
+    padding-top: 15px;
 }
 
 .pthumbnail img {
@@ -868,6 +878,10 @@ iframe {
         margin-right: 3px;
     }
     
+    .jcol-centered {
+      float: left;
+    }
+    
     .booking-well {
         border: solid 10px white;
         width: 100%;
@@ -880,21 +894,6 @@ iframe {
     
     .arrow {
         display: none;
-    }
-}
-
-@media screen and (max-width: 800px) {
-    #booking .booking-steps {
-        background-color: #f6f6f6;
-    }
-    
-    .booking-steps.row-centered {
-        text-align: left;
-    }
-    
-    .booking-steps.col-centered {
-        display: block;
-        float: left;
     }
 }
 
