--- a/templates/contact.html
+++ b/templates/contact.html
@@ -71,7 +71,7 @@
 	                <div class="row promo">
 	                	<div class="col-sm-6">
         				 <p><span class="gold">Get $150 off </span>for your next group vacation. 
-	        				 Discount code #45454545. </br></br> Please reach out to us 
+	        				 Discount code #{discount_code}. </br></br> Please reach out to us 
 	        				 <a href="http://travelzap.com/group-vacation-quote" target="_blank">here.</a>
         				 </p>
         			</div>
