--- a/templates/destination.html
+++ b/templates/destination.html
@@ -74,8 +74,44 @@
                 </br></br>
                 {package3_c}</p>
             </div>
-        </div>
-    </div>
+        </div><!-- .row first package row -->
+        
+<!-- START PACKAGES ROW 2----------------- -->
+        <div class="row col-padding-sm-view jrow-centered" style="display:{titlecss4};">
+            <div class="col-sm-4 white jcol-centered" style="display:{titlecss4};>
+                <img {src4package}="../images/package4.jpg" class="{package4imageCSS}">
+                <h4>{title4_c}</h4>
+                <p>
+                <span class="price" style="display:{price4css}">{package_4_price}{pricing_type_4}</span>
+                </br></br>
+                <a href="#/destination#booking" class="scroll-to"><button>book now!</button></a>
+                </br></br>
+                {package4_c}</p>
+            </div>
+            
+            <div class="col-sm-4 white jcol-centered" style="display:{titlecss5};">
+                <img {src5package}="../images/package5.jpg" class="{package5imageCSS}">
+                <h4>{title5_c}</h4>
+                <p>
+                <span class="price" style="display:{price5css}">{package_5_price}{pricing_type_5}</span>
+                </br></br>
+                <a href="#/destination#booking" class="scroll-to"><button>book now!</button></a>
+                </br></br>
+                {package5_c}</p>
+            </div>
+            
+            <div class="col-sm-4 white jcol-centered" style="display:{titlecss6};">
+                <img {src6package}="../images/package6.jpg" class="{package6imageCSS}">
+                <h4>{title6_c}</h4>
+                <p>
+                <span class="price" style="display:{price6css}">{package_6_price}{pricing_type_6}</span>
+                </br></br>
+                <a href="#/destination#booking" class="scroll-to"><button>book now!</button></a>
+                </br></br>
+                {package6_c}</p>
+            </div>
+        </div><!-- .row first package row -->
+    </div><!-- .container -->
 </section>
 
 <!-- BOOKING INFORMATION ====================================== -->
@@ -86,7 +122,7 @@
                 <h1>booking</h1>
                 <p>In order to be considered part of our 
                 wedding group, please fill out the below forms and our 
-                agent, {first_name_user}, will contact you to confirm your stay.</p>
+                agent, <b>{first_name_user},</b> will contact you to confirm your stay.</p>
                 <h4>Group reservation #{booking_number}</h4>
             </div><!-- .col-sm-8 -->
         </div><!-- .row -->
@@ -132,7 +168,7 @@
 </section>
 
 <!-- ADDITIONAL INFORMATION ====================================== -->
-<section id="additional-info" class="container-space text-center" style="display:{additional_info_css};">
+<section id="additional-info" class="container-space text-center" style="display:{additional_infoCss};">
     <h1>additional information</h1>
     <div class="container">
         <div class="row">
