--- a/templates/landing.html
+++ b/templates/landing.html
@@ -47,7 +47,7 @@
                 <p>We're getting married on {wedding_date} at {hotel_c} in {destination_c}! 
                 We truly hope you can join our family in this special celebration.</p>
                 <button data-toggle="modal" data-target="#rsvpModal">rsvp</button>
-                <a href="#/wedding"><button>Wedding Page</button></a>
+                <a href="#/wedding" style="display:{weddingpageCss};"><button>Wedding Page</button></a>
                 </br></br>
                 <p>We have hired a booking agent to make your travel
                 planning easy. Please checkout the Resort Page for more information about pricing and booking.</p>
