--- a/templates/wedding.html
+++ b/templates/wedding.html
@@ -6,7 +6,7 @@
     </div>
 </div><!-- .container -->
 
-<section id="gallery" class="container-space text-center" style="display: {couple_gallery}">
+<section id="gallery" class="container-space text-center" style="display: {couple_galleryCss}">
     <div class="container">
         <div class="row row-centered">
             <div class="col-md-3 col-centered" style="display:{coupleimage1Css}">
@@ -54,17 +54,33 @@
 </section><!-- #couple-story-->
 
 <!-- REGISTERY ====================================== -->
-<section id="registery" class="container-space text-center" style="display:{reg1css};">
+<section id="registery" class="container-space text-center" style="display:{reg1css};" style="display: none">
     <h1>Registry</h1>
     <div class="container">
         <div class="row">
             <div class="col-sm-6 col-sm-offset-3">
-                <p>{reg_decription}</p>
+                <p>{reg_description}</p>
                     
                     <a href="{reg1link}" target="_blank" style="display:{reg1css};"><button>{reg1name}</button></a>
                     <a href="{reg2link}" target="_blank" style="display:{reg2css};"><button>{reg2name}</button></a>
                     <a href="{reg3link}" target="_blank" style="display:{reg3css};"><button>{reg3name}</button></a>
                     <a href="{reg4link}" target="_blank" style="display:{reg4css};"><button>{reg4name}</button></a>
+            </div><!-- .col-sm-6 -->
+        </div><!-- .row -->
+    </div><!-- .container -->
+</section><!-- #registery-->
+
+<!-- BOOK NOW ====================================== -->
+<section id="book-now" class="container-space text-center">
+    <div class="container">
+        <div class="row">
+            <div class="col-sm-8 col-sm-offset-2">
+                <p>We have hired a booking agent to make your travel
+                planning easy. Please checkout the Resort Page for more information about pricing and booking.</p>
+                
+                <a href="#/destination"><button>Resort Page</button></a>
+                <a href="#/destination#packages"><button>price list</button></a>
+                <a href="#/destination#booking"><button>book now!</button></a>
             </div><!-- .col-sm-6 -->
         </div><!-- .row -->
     </div><!-- .container -->
@@ -185,24 +201,8 @@
     </div><!-- .container -->
 </section><!-- #maids-grooms -->
 
-<!-- BOOK NOW ====================================== -->
-<section id="book-now" class="container-space text-center">
-    <div class="container">
-        <div class="row">
-            <div class="col-sm-8 col-sm-offset-2">
-                <p>We have hired a booking agent to make your travel
-                planning easy. Please checkout the Resort Page for more information about pricing and booking.</p>
-                
-                <a href="#/destination"><button>Resort Page</button></a>
-                <a href="#/destination#packages"><button>price list</button></a>
-                <a href="#/destination#booking"><button>book now!</button></a>
-            </div><!-- .col-sm-6 -->
-        </div><!-- .row -->
-    </div><!-- .container -->
-</section><!-- #registery-->
-
 <!-- INSTAGRAM # ====================================== -->
-<section id="registery" class="container-space text-center">
+<section id="registery" class="container-space text-center" style="display:{instagramCSS}">
     <h1>Share your photos with us</h1>
     <div class="container">
         <div class="row">
