package image fixed

--- a/templates/destination.html
+++ b/templates/destination.html
@@ -43,7 +43,7 @@
 <!-- START PACKAGES ROW 1----------------- -->
         <div class="row col-padding-sm-view jrow-centered" style="display:{titlecss1};">
             <div class="col-sm-4 white jcol-centered">
-                <img {src1package}="../images/package1.jpg" class="{package1imageCSS}">
+                <img {src1package}="../images/package1.jpg" class="img-responsive pthumbnail" style="display: {package1imageCSS}">
                 <h4>{title1_c}</h4>
                 <p>
                 <span class="price" style="display:{price1css}">{package_1_price}{pricing_type_1}</span>
@@ -54,7 +54,7 @@
             </div>
             
             <div class="col-sm-4 white jcol-centered" style="display:{titlecss2};">
-                <img {src2package}="../images/package2.jpg" class="{package2imageCSS}">
+                <img {src2package}="../images/package2.jpg" class="img-responsive pthumbnail" style="display: {package2imageCSS}">
                 <h4>{title2_c}</h4>
                 <p>
                 <span class="price" style="display:{price2css}">{package_2_price}{pricing_type_2}</span>
@@ -65,7 +65,7 @@
             </div>
             
             <div class="col-sm-4 white jcol-centered" style="display:{titlecss3};">
-                <img {src3package}="../images/package1.jpg" class="{package3imageCSS}">
+                <img {src3package}="../images/package1.jpg" class="img-responsive pthumbnail" style="display: {package3imageCSS}">
                 <h4>{title3_c}</h4>
                 <p>
                 <span class="price" style="display:{price3css}">{package_3_price}{pricing_type_3}</span>
@@ -78,8 +78,8 @@
         
 <!-- START PACKAGES ROW 2----------------- -->
         <div class="row col-padding-sm-view jrow-centered" style="display:{titlecss4};">
-            <div class="col-sm-4 white jcol-centered" style="display:{titlecss4};>
-                <img {src4package}="../images/package4.jpg" class="{package4imageCSS}">
+            <div class="col-sm-4 white jcol-centered" style="display:{titlecss4};">
+                <img {src4package}="../images/package4.jpg" class="img-responsive pthumbnail" style="display: {package4imageCSS}">
                 <h4>{title4_c}</h4>
                 <p>
                 <span class="price" style="display:{price4css}">{package_4_price}{pricing_type_4}</span>
@@ -90,7 +90,7 @@
             </div>
             
             <div class="col-sm-4 white jcol-centered" style="display:{titlecss5};">
-                <img {src5package}="../images/package5.jpg" class="{package5imageCSS}">
+                <img {src5package}="../images/package5.jpg" class="img-responsive pthumbnail" style="display: {package5imageCSS}">
                 <h4>{title5_c}</h4>
                 <p>
                 <span class="price" style="display:{price5css}">{package_5_price}{pricing_type_5}</span>
@@ -101,7 +101,7 @@
             </div>
             
             <div class="col-sm-4 white jcol-centered" style="display:{titlecss6};">
-                <img {src6package}="../images/package6.jpg" class="{package6imageCSS}">
+                <img {src6package}="../images/package6.jpg" class="img-responsive pthumbnail" style="display: {package6imageCSS}">
                 <h4>{title6_c}</h4>
                 <p>
                 <span class="price" style="display:{price6css}">{package_6_price}{pricing_type_6}</span>
