--- a/templates/wedding.html
+++ b/templates/wedding.html
@@ -54,7 +54,7 @@
 </section><!-- #couple-story-->
 
 <!-- REGISTERY ====================================== -->
-<section id="registery" class="container-space text-center" style="display:{reg1css};" style="display: none">
+<section id="registery" class="container-space text-center" style="display:{reg1css};">
     <h1>Registry</h1>
     <div class="container">
         <div class="row">
